# ot-harjoitustyo

./: .coverage  .gitignore  .pylintrc  README.md  env.sample  pyproject.toml  scraps.md  tasks.py
.github/workflows/: codeql.yml  issuetable.yml  main.yml  report_vulns.yml  vulnerability_scan_to_dd.yml  vulns_to_dd.yml
dokumentaatio/: arkkitehtuuri.md  changelog.md  tuntikirjanpito.md  vaatimukset.md
laskarit/viikko1/: gitlog.txt  komentorivi.txt
laskarit/viikko2/maksukortti/: pyproject.toml
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
laskarit/viikko3/: monopoli.md
src/: .gitignore  CSV_reader.py  config.cfg  csv_reader.py  index.py  issue.py
src/entities/: comment.py  issue.py
src/resources/: label_configs.json  mapping.json  output.csv  sample_responses.py  sample_short.csv  test_config.cfg  user_mapping.csv  user_mappings.csv
src/services/: csv_reader.py  csv_services.py  data_fetcher.py  formatter.py  json_reader.py  paginator.py  reconstructor.py  settings_getter.py
src/tests/: CSV_reader_test.py  comment_test.py  data_fetcher_test.py  formatter_test.py  issue_test.py  json_reader_test.py  paginator_test.py  reconstructor_test.py  sample.csv  settings_getter_test.py  settings_validator_test.py  test_mapping.json  test_user_mappings.csv
src/typesets/: settings.py
src/typing/: settings.py
