[tool.poetry]
name = "gitlab2jiraissues"
version = "0.1.0"
description = ""
authors = ["Rasmus Paltschik"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
coverage = "^6.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
